pimlico/parsing/parser.output
State 2 conflicts: 1 shift/reduce


Grammar

    0 $accept: ROOT $end

    1 ROOT: _NEWLINE RULE_LIST
    2     | RULE_LIST
    3     | RULE_LIST _NEWLINE
    4     | _NEWLINE RULE_LIST _NEWLINE

    5 RULE_LIST: RULE
    6          | RULE_LIST _NEWLINE RULE

    7 RULE: _IDENTIFIER ':' SEQUENCE
    8     | _NEWLINE

    9 SEQUENCE: CHOICE
   10         | SEQUENCE CHOICE

   11 CHOICE: PREDICATED_TERM
   12       | CHOICE '|' PREDICATED_TERM

   13 PREDICATED_TERM: INSTANCED_TERM
   14                | '&' INSTANCED_TERM
   15                | '!' INSTANCED_TERM

   16 INSTANCED_TERM: TERM '+'
   17               | TERM '*'
   18               | TERM '?'
   19               | TERM '{' _INTEGER '}'
   20               | TERM '{' _INTEGER ':' '}'
   21               | TERM '{' _INTEGER ':' _INTEGER '}'
   22               | TERM '{' ':' _INTEGER '}'
   23               | TERM

   24 TERM: CONSTANT
   25     | RANGE
   26     | REFERENCE
   27     | '(' SEQUENCE ')'

   28 CONSTANT: _CONSTANT

   29 RANGE: '[' _CHARACTER '-' _CHARACTER ']'

   30 REFERENCE: _IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
'!' (33) 15
'&' (38) 14
'(' (40) 27
')' (41) 27
'*' (42) 17
'+' (43) 16
'-' (45) 29
':' (58) 7 20 21 22
'?' (63) 18
'[' (91) 29
']' (93) 29
'{' (123) 19 20 21 22
'|' (124) 12
'}' (125) 19 20 21 22
error (256)
_IDENTIFIER (258) 7 30
_CONSTANT (259) 28
_INTEGER (260) 19 20 21 22
_CHARACTER (261) 29
_NEWLINE (262) 1 3 4 6 8


Nonterminals, with rules where they appear

$accept (22)
    on left: 0
ROOT (23)
    on left: 1 2 3 4, on right: 0
RULE_LIST (24)
    on left: 5 6, on right: 1 2 3 4 6
RULE (25)
    on left: 7 8, on right: 5 6
SEQUENCE (26)
    on left: 9 10, on right: 7 10 27
CHOICE (27)
    on left: 11 12, on right: 9 10 12
PREDICATED_TERM (28)
    on left: 13 14 15, on right: 11 12
INSTANCED_TERM (29)
    on left: 16 17 18 19 20 21 22 23, on right: 13 14 15
TERM (30)
    on left: 24 25 26 27, on right: 16 17 18 19 20 21 22 23
CONSTANT (31)
    on left: 28, on right: 24
RANGE (32)
    on left: 29, on right: 25
REFERENCE (33)
    on left: 30, on right: 26


State 0

    0 $accept: . ROOT $end

    _IDENTIFIER  shift, and go to state 1
    _NEWLINE     shift, and go to state 2

    ROOT       go to state 3
    RULE_LIST  go to state 4
    RULE       go to state 5


State 1

    7 RULE: _IDENTIFIER . ':' SEQUENCE

    ':'  shift, and go to state 6


State 2

    1 ROOT: _NEWLINE . RULE_LIST
    4     | _NEWLINE . RULE_LIST _NEWLINE
    8 RULE: _NEWLINE .

    _IDENTIFIER  shift, and go to state 1
    _NEWLINE     shift, and go to state 7

    _NEWLINE  [reduce using rule 8 (RULE)]
    $default  reduce using rule 8 (RULE)

    RULE_LIST  go to state 8
    RULE       go to state 5


State 3

    0 $accept: ROOT . $end

    $end  shift, and go to state 9


State 4

    2 ROOT: RULE_LIST .
    3     | RULE_LIST . _NEWLINE
    6 RULE_LIST: RULE_LIST . _NEWLINE RULE

    _NEWLINE  shift, and go to state 10

    $default  reduce using rule 2 (ROOT)


State 5

    5 RULE_LIST: RULE .

    $default  reduce using rule 5 (RULE_LIST)


State 6

    7 RULE: _IDENTIFIER ':' . SEQUENCE

    _IDENTIFIER  shift, and go to state 11
    _CONSTANT    shift, and go to state 12
    '['          shift, and go to state 13
    '('          shift, and go to state 14
    '&'          shift, and go to state 15
    '!'          shift, and go to state 16

    SEQUENCE         go to state 17
    CHOICE           go to state 18
    PREDICATED_TERM  go to state 19
    INSTANCED_TERM   go to state 20
    TERM             go to state 21
    CONSTANT         go to state 22
    RANGE            go to state 23
    REFERENCE        go to state 24


State 7

    8 RULE: _NEWLINE .

    $default  reduce using rule 8 (RULE)


State 8

    1 ROOT: _NEWLINE RULE_LIST .
    4     | _NEWLINE RULE_LIST . _NEWLINE
    6 RULE_LIST: RULE_LIST . _NEWLINE RULE

    _NEWLINE  shift, and go to state 25

    $default  reduce using rule 1 (ROOT)


State 9

    0 $accept: ROOT $end .

    $default  accept


State 10

    3 ROOT: RULE_LIST _NEWLINE .
    6 RULE_LIST: RULE_LIST _NEWLINE . RULE

    _IDENTIFIER  shift, and go to state 1
    _NEWLINE     shift, and go to state 7

    $default  reduce using rule 3 (ROOT)

    RULE  go to state 26


State 11

   30 REFERENCE: _IDENTIFIER .

    $default  reduce using rule 30 (REFERENCE)


State 12

   28 CONSTANT: _CONSTANT .

    $default  reduce using rule 28 (CONSTANT)


State 13

   29 RANGE: '[' . _CHARACTER '-' _CHARACTER ']'

    _CHARACTER  shift, and go to state 27


State 14

   27 TERM: '(' . SEQUENCE ')'

    _IDENTIFIER  shift, and go to state 11
    _CONSTANT    shift, and go to state 12
    '['          shift, and go to state 13
    '('          shift, and go to state 14
    '&'          shift, and go to state 15
    '!'          shift, and go to state 16

    SEQUENCE         go to state 28
    CHOICE           go to state 18
    PREDICATED_TERM  go to state 19
    INSTANCED_TERM   go to state 20
    TERM             go to state 21
    CONSTANT         go to state 22
    RANGE            go to state 23
    REFERENCE        go to state 24


State 15

   14 PREDICATED_TERM: '&' . INSTANCED_TERM

    _IDENTIFIER  shift, and go to state 11
    _CONSTANT    shift, and go to state 12
    '['          shift, and go to state 13
    '('          shift, and go to state 14

    INSTANCED_TERM  go to state 29
    TERM            go to state 21
    CONSTANT        go to state 22
    RANGE           go to state 23
    REFERENCE       go to state 24


State 16

   15 PREDICATED_TERM: '!' . INSTANCED_TERM

    _IDENTIFIER  shift, and go to state 11
    _CONSTANT    shift, and go to state 12
    '['          shift, and go to state 13
    '('          shift, and go to state 14

    INSTANCED_TERM  go to state 30
    TERM            go to state 21
    CONSTANT        go to state 22
    RANGE           go to state 23
    REFERENCE       go to state 24


State 17

    7 RULE: _IDENTIFIER ':' SEQUENCE .
   10 SEQUENCE: SEQUENCE . CHOICE

    _IDENTIFIER  shift, and go to state 11
    _CONSTANT    shift, and go to state 12
    '['          shift, and go to state 13
    '('          shift, and go to state 14
    '&'          shift, and go to state 15
    '!'          shift, and go to state 16

    $default  reduce using rule 7 (RULE)

    CHOICE           go to state 31
    PREDICATED_TERM  go to state 19
    INSTANCED_TERM   go to state 20
    TERM             go to state 21
    CONSTANT         go to state 22
    RANGE            go to state 23
    REFERENCE        go to state 24


State 18

    9 SEQUENCE: CHOICE .
   12 CHOICE: CHOICE . '|' PREDICATED_TERM

    '|'  shift, and go to state 32

    $default  reduce using rule 9 (SEQUENCE)


State 19

   11 CHOICE: PREDICATED_TERM .

    $default  reduce using rule 11 (CHOICE)


State 20

   13 PREDICATED_TERM: INSTANCED_TERM .

    $default  reduce using rule 13 (PREDICATED_TERM)


State 21

   16 INSTANCED_TERM: TERM . '+'
   17               | TERM . '*'
   18               | TERM . '?'
   19               | TERM . '{' _INTEGER '}'
   20               | TERM . '{' _INTEGER ':' '}'
   21               | TERM . '{' _INTEGER ':' _INTEGER '}'
   22               | TERM . '{' ':' _INTEGER '}'
   23               | TERM .

    '{'  shift, and go to state 33
    '+'  shift, and go to state 34
    '*'  shift, and go to state 35
    '?'  shift, and go to state 36

    $default  reduce using rule 23 (INSTANCED_TERM)


State 22

   24 TERM: CONSTANT .

    $default  reduce using rule 24 (TERM)


State 23

   25 TERM: RANGE .

    $default  reduce using rule 25 (TERM)


State 24

   26 TERM: REFERENCE .

    $default  reduce using rule 26 (TERM)


State 25

    4 ROOT: _NEWLINE RULE_LIST _NEWLINE .
    6 RULE_LIST: RULE_LIST _NEWLINE . RULE

    _IDENTIFIER  shift, and go to state 1
    _NEWLINE     shift, and go to state 7

    $default  reduce using rule 4 (ROOT)

    RULE  go to state 26


State 26

    6 RULE_LIST: RULE_LIST _NEWLINE RULE .

    $default  reduce using rule 6 (RULE_LIST)


State 27

   29 RANGE: '[' _CHARACTER . '-' _CHARACTER ']'

    '-'  shift, and go to state 37


State 28

   10 SEQUENCE: SEQUENCE . CHOICE
   27 TERM: '(' SEQUENCE . ')'

    _IDENTIFIER  shift, and go to state 11
    _CONSTANT    shift, and go to state 12
    '['          shift, and go to state 13
    '('          shift, and go to state 14
    ')'          shift, and go to state 38
    '&'          shift, and go to state 15
    '!'          shift, and go to state 16

    CHOICE           go to state 31
    PREDICATED_TERM  go to state 19
    INSTANCED_TERM   go to state 20
    TERM             go to state 21
    CONSTANT         go to state 22
    RANGE            go to state 23
    REFERENCE        go to state 24


State 29

   14 PREDICATED_TERM: '&' INSTANCED_TERM .

    $default  reduce using rule 14 (PREDICATED_TERM)


State 30

   15 PREDICATED_TERM: '!' INSTANCED_TERM .

    $default  reduce using rule 15 (PREDICATED_TERM)


State 31

   10 SEQUENCE: SEQUENCE CHOICE .
   12 CHOICE: CHOICE . '|' PREDICATED_TERM

    '|'  shift, and go to state 32

    $default  reduce using rule 10 (SEQUENCE)


State 32

   12 CHOICE: CHOICE '|' . PREDICATED_TERM

    _IDENTIFIER  shift, and go to state 11
    _CONSTANT    shift, and go to state 12
    '['          shift, and go to state 13
    '('          shift, and go to state 14
    '&'          shift, and go to state 15
    '!'          shift, and go to state 16

    PREDICATED_TERM  go to state 39
    INSTANCED_TERM   go to state 20
    TERM             go to state 21
    CONSTANT         go to state 22
    RANGE            go to state 23
    REFERENCE        go to state 24


State 33

   19 INSTANCED_TERM: TERM '{' . _INTEGER '}'
   20               | TERM '{' . _INTEGER ':' '}'
   21               | TERM '{' . _INTEGER ':' _INTEGER '}'
   22               | TERM '{' . ':' _INTEGER '}'

    _INTEGER  shift, and go to state 40
    ':'       shift, and go to state 41


State 34

   16 INSTANCED_TERM: TERM '+' .

    $default  reduce using rule 16 (INSTANCED_TERM)


State 35

   17 INSTANCED_TERM: TERM '*' .

    $default  reduce using rule 17 (INSTANCED_TERM)


State 36

   18 INSTANCED_TERM: TERM '?' .

    $default  reduce using rule 18 (INSTANCED_TERM)


State 37

   29 RANGE: '[' _CHARACTER '-' . _CHARACTER ']'

    _CHARACTER  shift, and go to state 42


State 38

   27 TERM: '(' SEQUENCE ')' .

    $default  reduce using rule 27 (TERM)


State 39

   12 CHOICE: CHOICE '|' PREDICATED_TERM .

    $default  reduce using rule 12 (CHOICE)


State 40

   19 INSTANCED_TERM: TERM '{' _INTEGER . '}'
   20               | TERM '{' _INTEGER . ':' '}'
   21               | TERM '{' _INTEGER . ':' _INTEGER '}'

    '}'  shift, and go to state 43
    ':'  shift, and go to state 44


State 41

   22 INSTANCED_TERM: TERM '{' ':' . _INTEGER '}'

    _INTEGER  shift, and go to state 45


State 42

   29 RANGE: '[' _CHARACTER '-' _CHARACTER . ']'

    ']'  shift, and go to state 46


State 43

   19 INSTANCED_TERM: TERM '{' _INTEGER '}' .

    $default  reduce using rule 19 (INSTANCED_TERM)


State 44

   20 INSTANCED_TERM: TERM '{' _INTEGER ':' . '}'
   21               | TERM '{' _INTEGER ':' . _INTEGER '}'

    _INTEGER  shift, and go to state 47
    '}'       shift, and go to state 48


State 45

   22 INSTANCED_TERM: TERM '{' ':' _INTEGER . '}'

    '}'  shift, and go to state 49


State 46

   29 RANGE: '[' _CHARACTER '-' _CHARACTER ']' .

    $default  reduce using rule 29 (RANGE)


State 47

   21 INSTANCED_TERM: TERM '{' _INTEGER ':' _INTEGER . '}'

    '}'  shift, and go to state 50


State 48

   20 INSTANCED_TERM: TERM '{' _INTEGER ':' '}' .

    $default  reduce using rule 20 (INSTANCED_TERM)


State 49

   22 INSTANCED_TERM: TERM '{' ':' _INTEGER '}' .

    $default  reduce using rule 22 (INSTANCED_TERM)


State 50

   21 INSTANCED_TERM: TERM '{' _INTEGER ':' _INTEGER '}' .

    $default  reduce using rule 21 (INSTANCED_TERM)
